(executables
 (names
  tutorial_02_clock
  tutorial_06_sound
  tutorial_07_fx
  tutorial_08_physics
  tutorial_09_scrolling)
 (libraries orx))

(alias
 (name tutorials)
 (deps
  tutorial_02_clock.exe
  tutorial_06_sound.exe
  tutorial_07_fx.exe
  tutorial_08_physics.exe
  tutorial_09_scrolling.exe))

(rule
 (alias tutorials)
 (enabled_if
  (<> %{ocaml-config:system} macosx))
 (target liborxd%{ext_dll})
 (deps
  (glob_files *.exe))
 (action
  (copy
   %{read-lines:../../src/discover/orx-c-library-location.txt}
   %{target})))

(rule
 (alias tutorials)
 (enabled_if
  (= %{ocaml-config:system} macosx))
 (target liborxd.dylib)
 (deps
  (glob_files *.exe))
 (action
  (copy
   %{read-lines:../../src/discover/orx-c-library-location.txt}
   %{target})))
