(rule
 (targets generated.ml)
 (deps stubgen/orx_stubgen.exe)
 (action
  (with-stdout-to
   %{targets}
   (run %{deps} -ml))))

(rule
 (targets orx_stubs.c)
 (deps stubgen/orx_stubgen.exe)
 (action
  (with-stdout-to
   %{targets}
   (run %{deps} -c))))

(library
 (public_name orx)
 (synopsis "Bindings for orx")
 (libraries ctypes.foreign.threaded orx_bindings threads)
 (flags
  :standard
  (:include ../orx-ocaml-link-flags.sexp))
 (foreign_stubs
  (language c)
  (names orx_stubs)
  (flags
   (:include ../orx-c-include-flags.sexp)))
 (c_library_flags
  (:include ../orx-c-link-flags.sexp)))
