(rule
 (targets generated.ml)
 (deps stubgen/orx_stubgen.run.exe)
 (action
  (with-stdout-to
   %{targets}
   (run %{deps} -ml))))

(rule
 (targets orx_stubs.c)
 (deps stubgen/orx_stubgen.run.exe)
 (action
  (with-stdout-to
   %{targets}
   (run %{deps} -c))))

(library
 (public_name orx)
 (synopsis "Bindings for orx")
 (libraries ctypes.foreign orx_bindings threads)
 (flags
  :standard
  (:include ../orx-ocaml-link-flags.sexp))
 (foreign_stubs
  (language c)
  (names orx_stubs orx_manual_stubs)
  (flags
   :standard
   (:include ../orx-c-include-flags.sexp)))
 (c_library_flags
  :standard
  (:include ../orx-c-link-flags.sexp)))
