(executable
 (name orx_types_stubgen)
 (libraries orx_types_bindings ctypes.stubs))

(rule
 (targets orx_ml_types_stubgen.c)
 (deps ./orx_types_stubgen.exe)
 (action
  (with-stdout-to
   %{targets}
   (run %{deps}))))

(rule
 (enabled_if
  (<> %{ocaml-config:system} macosx))
 (targets orx_ml_types_stubgen.exe)
 (deps
  (:c ./orx_ml_types_stubgen.c))
 (action
  (run
   %{cc}
   %{c}
   %{read-lines:../../discover/orx-c-include-flags.txt}
   %{read-lines:../../discover/orx-c-link-flags.txt}
   -I
   %{ocaml_where}/../ctypes
   -I
   %{ocaml_where}
   -o
   %{targets})))

(rule
 (enabled_if
  (= %{ocaml-config:system} macosx))
 (targets orx_ml_types_stubgen.exe)
 (deps
  (:c ./orx_ml_types_stubgen.c))
 (action
  (progn
   (run
    %{cc}
    %{c}
    %{read-lines:../../discover/orx-c-include-flags.txt}
    %{read-lines:../../discover/orx-c-link-flags.txt}
    -I
    %{ocaml_where}/../ctypes
    -I
    %{ocaml_where}
    -o
    %{targets})
   (run
    install_name_tool
    -change
    @executable_path/%{read-lines:../../discover/orx-c-library.txt}
    %{read-lines:../../discover/orx-c-library-location.txt}
    %{targets}))))
